plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
    id("com.gradleup.shadow") version "8.3.6"
}

group 'com.lifedrained'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
application {
    applicationDefaultJvmArgs = [
            "--add-reads", "org.jboss.logging=java.logging"
    ]
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.lifedrained.demoexam'
    mainClass = 'com.lifedrained.demoexam.Main'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.2.1')
    implementation('net.synedra:validatorfx:0.5.0') {
        exclude(group: 'org.openjfx')

    }
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
    implementation 'org.jboss.logging:jboss-logging:3.5.0.Final'
    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation 'commons-io:commons-io:2.18.0'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation 'org.apache.commons:commons-collections4:4.4'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-math4-core
    implementation 'org.apache.commons:commons-math4-core:4.0-beta1'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'org.hibernate.orm:hibernate-core:6.6.13.Final'
    // https://mvnrepository.com/artifact/org.hibernate.common/hibernate-commons-annotations
    implementation 'org.hibernate.common:hibernate-commons-annotations:7.0.3.Final'
    // https://mvnrepository.com/artifact/com.fasterxml/classmate
    implementation 'com.fasterxml:classmate:1.7.0'
    // https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy
    implementation 'net.bytebuddy:byte-buddy:1.17.5'
    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:5.4.1'
    implementation 'org.apache.commons:commons-csv:1.14.0'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
    // https://mvnrepository.com/artifact/org.checkerframework/checker-qual
    implementation 'org.checkerframework:checker-qual:3.49.2'
    implementation fileTree('libs')
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
    implementation 'org.apache.commons:commons-text:1.13.1'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}